<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KBC</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sevencrore">700,00,000</string>
    <string name="fivecrore">500,00,000</string>
    <string name="threecrore">300,00,000</string>
    <string name="onecrore">100,00,000</string>
    <string name="fivetylac">50,00,000</string>
    <string name="twentyfivelac">25,00,000</string>
    <string name="twelvelac">12,50,000</string>
    <string name="sixlac">6,40,000</string>
    <string name="threelac">3,20,000</string>
    <string name="onelac">1,60,000</string>
    <string name="eighty_K">80,000</string>
    <string name="fourty_K">40,000</string>
    <string name="twenty_K">20,000</string>
    <string name="ten_K">10,000</string>
    <string name="five_K">5,000</string>
    
</resources>
